--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
-<body lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <title>Index</title>
+  <head>
+    <meta charset="UTF-8">
+    <title>Cinguettio</title>
 
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"/> <!--per icone-->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"/> <!--per icone-->
 
-  <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css"/>
+    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css"/>
 
-  <link rel="stylesheet" href="style/main.css"/> <!--main Css con le regole-->
+    <link rel="stylesheet" href="style/main.css"/> <!--main Css con le regole-->
 
-</head>
-<body ng-app="cinguettio">
-<div ng-view> </div>
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script><!--serve per bootstrap-->
-<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script type="text/javascript" src="script/app.js"></script>
-</body>
+  </head>
+
+  <body ng-app="cinguettio">
+
+<!--NAVBAR EXAMPLE-->
+  <div class="nav navbar-default">
+    <ul class="nav navbar-nav" style="border: 0;">
+      <li><a class="navbar-brand" style="color:#ffffff; font-size: 20px;" href="#/home"><i class="fa fa-twitter"></i>
+        Cinguettio</a></li>
+      <li><a href="#/home"><i class="fa fa-home" aria-hidden="true" style="font-size:25px;margin-right:10px;"></i> Home</a></li>
+      <li><a href="#/follower"><i class="fa fa-users" style="font-size:25px;margin-right:10px;" aria-hidden="true" ></i> Chi Mi Segue</a></li>
+      <li><a href="#/following"><i class="fa fa-comment-o" style="font-size:25px;margin-right:10px;" aria-hidden="true" ></i> Chi Seguo</a></li>
+      <li><a href="#/myProfile"><i class="fa fa-info" style="font-size:25px;margin-right:10px;" aria-hidden="true" ></i> Info Profilo</a></li>
+    </ul>
+    <p class="text-right" style="margin-top: 15px; font-size: 16px;">Benvenuto!</p>
+  </div>
+
+  <div ng-view> </div>
+
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script><!--serve per bootstrap-->
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script type="text/javascript" src="script/app.js"></script>
+    <script type="text/javascript" src="script/login/loginController.js"></script>
+    <script type="text/javascript" src="script/registration/registrationController.js"></script>
+    <script type="text/javascript" src="script/home/homeController.js"></script>
+    <script type="text/javascript" src="script/myProfile/myProfile.js"></script>
+    <script type="text/javascript" src="script/followers/followersController.js"></script>
+    <script type="text/javascript" src="script/following/followingController.js"></script>
+
+  </body>
+
 </html>
 
